--- a/proyecto_final_aiden/index.html
+++ b/proyecto_final_aiden/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="c:\Users\Sena\Documents\prueba aiden\LOGO2.png" alt="logo" width="131px" height="39px"></a>
+        <a href="#" class="logo"><img src="img/LOGO2.png" alt="logo" width="131px" height="39px"></a>
         <ul>
             <li><a href="#sec">diagrama</a></li>
             <li><a href="#gallery">galeria</a></li>
@@ -14,12 +14,12 @@
         </ul>
     </header>
     <section>
-        <img src="stars.png" id="stars">
-        <img src="moon.png" id="moon">
-        <img src="mountains_behind.png" id="mountains_behind">
+        <img src="img/stars.png" id="stars">
+        <img src="img/moon.png" id="moon">
+        <img src="img/mountains_behind.png" id="mountains_behind">
         <h2 id="text">AIDEN</h2>
         <a href="#sec" id="btn">comenzar</a>
-        <img src="mountains_front.png" id="mountains_front">
+        <img src="img/mountains_front.png" id="mountains_front">
     </section>
     <div class="sec" id="sec">
         <h2 style="text-align: center; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">diagrama de flujo</h2>
@@ -32,28 +32,28 @@
 
     <div class="gallery" id="gallery">
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\inicio 01-min.png" alt="Imagen 1">
+            <img src="img/inicio 01-min.png" alt="Imagen 1">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\MOCKUP POPUP 1-min.png" alt="Imagen 2">
+            <img src="img/MOCKUP POPUP 1-min.png" alt="Imagen 2">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\modulos pt1-min.png" alt="Imagen 3">
+            <img src="img/modulos pt1-min.png" alt="Imagen 3">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\modulos pt2-min.png" alt="Imagen 4">
+            <img src="img/modulos pt2-min.png" alt="Imagen 4">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\modulos pt3-min.png" alt="Imagen 5">
+            <img src="img/modulos pt3-min.png" alt="Imagen 5">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\modulos pt4-min.png" alt="Imagen 6">
+            <img src="img/modulos pt4-min.png" alt="Imagen 6">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\MOCKUP DESAFIOS-min.png" alt="Imagen 7">
+            <img src="img/MOCKUP DESAFIOS-min.png" alt="Imagen 7">
         </div>
         <div class="gallery-item">
-            <img src="c:\Users\Sena\Documents\prueba aiden\MOCKUP POPUP 2-min.png" alt="Imagen 8">
+            <img src="img/MOCKUP POPUP 2-min.png" alt="Imagen 8">
         </div>
 
 
@@ -63,16 +63,10 @@
     
 
 
-    <div id="modal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="modal-img">
-        <div id="caption"></div>
-    </div>
-
 
     <footer>
         <div class="container">
-            <img src="c:\Users\Sena\Documents\prueba aiden\LOGO2.png" alt="logoA" width="175" height="52">
+            <img src="img/LOGO2.png" alt="logoA" width="175" height="52">
             <p> |   Enviar sugerencia</p>
         </div>
     </footer>
